--- a/environment.yml
+++ b/environment.yml
@@ -1,4 +1,4 @@
-name: thesis
+name: 2025-dotson-thesis
 channels:
   - conda-forge
   - bioconda
@@ -12,6 +12,7 @@ dependencies:
   - snakemake-minimal>=8.14
   - yaml
   - lxml
+  - graphviz
 
   - dask
   - pandas
