--- a/analysis/Snakefile
+++ b/analysis/Snakefile
@@ -1,18 +1,33 @@
+import sys
+
+
 rule targets:
     input:
         thesis = "../docs/thesis.pdf",
         dag = "dag.png"
 
-
-rule build_thesis:
-    input: 
-        main_tex = "../docs/thesis.tex"
-    output: "../docs/thesis.pdf"
-    run:
-        """
-        (cd ../docs && make)
-        """
-
+if sys.platform == 'Windows':
+    rule build_thesis:
+        input: 
+            main_tex = "../docs/thesis.tex"
+        output: "../docs/thesis.pdf"
+        run:
+            """
+            cd C:/path/to/thesis_directory && \
+            pdflatex -shell-escape thesis.tex && \
+            biber thesis && \
+            pdflatex -shell-escape thesis.tex && \
+            pdflatex -shell-escape thesis.tex
+            """
+elif sys.platform in ['darwin', 'linux']:
+    rule build_thesis:
+        input: 
+            main_tex = "../docs/thesis.tex"
+        output: "../docs/thesis.pdf"
+        run:
+            """
+            (cd ../docs && make)
+            """
 
 rule build_dag:
     input: "Snakefile"
