--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Create environment with Mamba
         uses: conda-incubator/setup-miniconda@v2
         with:
-          miniforge-variant: Mambaforge # mamba is faster than base conda
+          miniforge-variant: Miniforge3 # mamba is faster than base conda
           miniforge-version: latest
           channels: conda-forge, bioconda
           auto-activate-base: false
