updates osier chapter

--- a/analysis/Snakefile
+++ b/analysis/Snakefile
@@ -27,6 +27,7 @@ rule collect_figures:
         elasticity_plot = f"{docs_path}figures/elasticity.pgf",
         example_pareto_plot = f"{docs_path}figures/truss2d_pareto.pgf",
         near_optimal_plot = f"{docs_path}figures/near-optimal-pareto.pgf",
+        interior_points_plot = f"{docs_path}figures/nd-mga-paretofront.pgf",
         pareto_3d = f"{docs_path}figures/3d-mga-paretofront.pgf"
     output:
         log = figure_log
@@ -82,6 +83,7 @@ rule plot_example_fronts:
     input: "scripts/pareto_front.py"
     output:
         example_pareto_plot = f"{docs_path}figures/truss2d_pareto.pgf",
+        interior_points_plot = f"{docs_path}figures/nd-mga-paretofront.pgf",
         near_optimal_plot = f"{docs_path}figures/near-optimal-pareto.pgf"
     script: f"{input}"
 
