--- a/analysis/Snakefile
+++ b/analysis/Snakefile
@@ -11,6 +11,7 @@ docs_path = "../docs/"
 data_path = "../data/"
 osier_data = f"{data_path}2023-osier-simulation-results/"
 figure_log = "figures.log"
+ch4_log = "ch4.log"
 
 with open(f"{docs_path}Makefile", "r") as file:
     lines = file.readlines()
@@ -32,6 +33,10 @@ rule retrieve_prelim_results:
         unsga3_results = f"{osier_data}2022-12-31-USNGA3-results.pkl",
         pf_nsga3 = f"{osier_data}algorithm_comparison/2023-05-06_nsga3_PF_Fitness_95.pkl_95",
         pf_nsga2 = f"{osier_data}algorithm_comparison/2023-05-12-nsga2_PF_Fitness_95.pkl_95",
+        temoa_F2 = f"{osier_data}model_comparison/2022-11-18-temoa_mga_objective_remap.pkl",
+        temoa_mga_design = f"{osier_data}/model_comparison/2022-11-18-temoa-mga-design.pkl",
+        unsga3_design = f"{osier_data}/model_comparison/2022-12-31-optimal_design_X.pkl",
+        unsga3_objective = f"{osier_data}/model_comparison/2022-12-31-optimal_objective_F.pkl",
     script: "scripts/04-benchmark-scripts/retrieve_databundle.py"
 
 rule plot_algorithm_comparison:
@@ -43,9 +48,27 @@ rule plot_algorithm_comparison:
         alg_comp_plot = f"{docs_path}figures/results/algorithm_comparison_kde.pgf"
     script: "scripts/04-benchmark-scripts/plot_algorithm_comparison.py"
 
-# rule benchmark_chapter:
-#     input:
+rule plot_temoa_comparison:
+    input:
+        unsga3_results = f"{osier_data}2022-12-31-USNGA3-results.pkl",
+        temoa_F2 = f"{osier_data}model_comparison/2022-11-18-temoa_mga_objective_remap.pkl",
+        temoa_mga_design = f"{osier_data}/model_comparison/2022-11-18-temoa-mga-design.pkl",
+        unsga3_design = f"{osier_data}/model_comparison/2022-12-31-optimal_design_X.pkl",
+        unsga3_objective = f"{osier_data}/model_comparison/2022-12-31-optimal_objective_F.pkl",
+    output:
+        temoa_benchmark_01 = f"{docs_path}figures/temoa_osier_benchmark_01.pgf",
 
+rule benchmark_chapter:
+    input:
+        alg_comp_plot = f"{docs_path}figures/results/algorithm_comparison_kde.pgf",
+    output:
+        ch4_log
+    shell:
+        """
+        for file in {input}; do
+            echo $file >> {output}
+        done
+        """
 
 
 rule collect_figures:
@@ -70,7 +93,8 @@ if sys.platform == 'Windows':
     rule build_thesis:
         input: 
             main_tex = f"{docs_path}{output_name}.tex",
-            log = figure_log
+            log = figure_log,
+            ch4_log=ch4_log,
         output: f"{docs_path}{output_name}.pdf"
         shell:
             f"""
@@ -84,7 +108,8 @@ elif sys.platform in ['darwin', 'linux']:
     rule build_thesis:
         input: 
             main_tex = f"{docs_path}{output_name}.tex",
-            log = figure_log
+            log = figure_log,
+            ch4_log = ch4_log,
         output: f"{docs_path}{output_name}.pdf"
         shell:
             f"""
